<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/title_nether_deployment"
                android:textSize="@dimen/separator_title_text_size"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_nether_base_url"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/netherBaseUrlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_nether_client_id"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/netherClientIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_nether_client_secret"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/netherClientSecretEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="@string/title_user_authentication"
                android:textSize="@dimen/separator_title_text_size"/>
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_user_id"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/userIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_password"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <Button android:id="@+id/authenticateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:text="@string/button_text_authenticate" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="@string/title_nether_api"
                android:textSize="@dimen/separator_title_text_size"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="@string/title_post_score"
                android:textSize="@dimen/text_size_medium"/>
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_country"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/countryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_score"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/scoreEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <Button android:id="@+id/postScoreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:text="@string/button_text_post_score" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_section_padding"
                android:singleLine="true"
                android:text="@string/title_get_leaderboard"
                android:textSize="@dimen/text_size_medium"/>
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/label_leaderboard_name"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/leaderboardNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_large"/>
            </LinearLayout>
            
            <Button android:id="@+id/getLeaderboardButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_padding"
                    android:text="@string/button_text_get_leaderboard" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>